# connections

./: CMakeLists.txt
include/: library.h  sockets.h
src/: sockets.cpp
test/: CMakeLists.txt
test/src/: main.cpp
